Fix account balance layout issues on 1440

--- a/assets/stylesheets/layout/_layout.grid.scss
+++ b/assets/stylesheets/layout/_layout.grid.scss
@@ -57,6 +57,43 @@
 .panel:nth-child(1) {
 	grid-area: 3 / 2 / 4 / 3;
 }
+.l-grid-account-balance {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1.1fr;
+	grid-template-rows: repeat(2, 1fr);
+	grid-column-gap: $SPACING_30;
+	background: $MEDIUM_LIGHT_GREY;
+	border-radius: $BORDER_RADIUS_16;
+	padding: $SPACING_32;
+	margin-bottom: $SPACING_48;
+}
+.l-grid-account-balance h4 {
+	font-size: $BODY_TEXT;
+	line-height: $SPACING_28;
+}
+.l-grid-account-balance__panel-one {
+	grid-area: 1 / 1 / 2 / 5;
+}
+.l-grid-account-balance__panel-two {
+	grid-area: 2 / 1 / 3 / 2;
+}
+.l-grid-account-balance__panel-three {
+	grid-area: 2 / 2 / 3 / 3;
+	align-self: center;
+}
+.l-grid-account-balance__panel-four {
+	grid-area: 2 / 3 / 3 / 4;
+	align-self: center;
+}
+.l-grid-account-balance__panel-five {
+	grid-area: 2 / 4 / 3 / 5;
+	align-self: center;
+}
+.l-grid-account-balance__panel-six {
+	grid-area: 1 / 5 / 3 / 6;
+	border-left: $SPACING_1 solid $LIGHT_GREY;
+	padding-left: $SPACING_30;
+}
 
 // 2. Grid responsive
 @media screen and (max-width: $SPACING_1440) {
